--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -215,7 +215,7 @@
             <div class="col s12">
                 <a href="#/" class="modal-action modal-close waves-effect waves-red btn btn-s colorAccent"
                    translate="commons.buttons.cancel"></a>
-                <button type="submit"  style="max-width:50%"
+                <button type="submit"
                         translate="commons.buttons.validate" ng-disabled="loginForm.$invalid" tabindex="8"
                         ng-class="{'btn btn-s waves-effect waves-white disabled': loginForm.$invalid, 
                                   'btn btn-s waves-effect waves-white colorSecondary': !loginForm.$invalid}">
