--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -27,28 +27,28 @@
     </div>
 
     <div class="row">
-        <form class="col s12" ng-submit="checkAndformatEvent()" name="eventForm">
+        <form class="col s12" ng-submit="checkAndformatEvent()" name="eventForm" novalidate
             <!-- Planning-->
             <div class="card-panel">
                 <div class="row">
                     <div class="col m6 s12">
-                        <h6 class="red-text text-lighten-1" translate="eventLabels.SectionPlaning"></h6>
+                        <h6 class="colorAccent-text" translate="eventLabels.SectionPlaning"></h6>
                         <div class="input-field col s4">
                             <label>{{'eventLabels.StartDate' | translate }} <span
-                                    class="red-text text-lighten-1">*</span></label>
+                                    class="colorAccent-text">*</span></label>
                         </div>
                         <div class="input-field col s8">
                             <input id="EventStartDate" name="EventStartDate" type="text" class="datepicker"
                                    ng-model="startDate" required
                                    ng-class="{ 'has-error' : eventForm.EventStartDate.$invalid && !eventForm.EventStartDate.$pristine }"/>
                         </div>
-                        <div class="small red-text text-lighten-1 col s12"
+                        <div class="small colorAccent-text col s12"
                              ng-show="eventForm.EventStartDate.$invalid && !eventForm.EventStartDate.$pristine"
                              translate="eventErrors.StartDate"></div>
 
                         <div class="input-field col s4">
                             <label>{{'eventLabels.StartHour' | translate }} <span
-                                    class="red-text text-lighten-1">*</span></label>
+                                    class="colorAccent-text">*</span></label>
                         </div>
                         <div class="input-field col s8">
                             <input id="EventStartHours" input-clock data-twelvehour="false" data-donetext="{{close}}" data-default="now" type="text"
@@ -59,27 +59,27 @@
                                    />-->
                         </div>
                         
-                        <div class="small red-text text-lighten-1 col s12"
+                        <div class="small colorAccent-text col s12"
                              ng-show="eventForm.EventStartHours.$invalid && !eventForm.EventStartHours.$pristine"
                              translate="eventErrors.StartHour"></div>
                     </div>
                     <!-- EventType -->
                     <div class="col m6 s12">
-                        <h6 class="red-text text-lighten-1" translate="eventLabels.SectionIdentity"></h6>
+                        <h6 class="colorAccent-text" translate="eventLabels.SectionIdentity"></h6>
                         <div class="input-field col s3">
                             <label>{{'eventLabels.Label' | translate }} <span
-                                    class="red-text text-lighten-1">*</span></label>
+                                    class="colorAccent-text">*</span></label>
                         </div>
                         <div class="input-field col s9">
                             <input name="eventLabel" type="text" ng-model="event.label" required
                                    ng-class="{ 'has-error' : eventForm.eventLabel.$invalid && !eventForm.eventLabel.$pristine }">
-                                <span class="small red-text text-lighten-1"
+                                <span class="small colorAccent-text"
                                       ng-show="eventForm.eventLabel.$invalid && !eventForm.eventLabel.$pristine"
                                       translate="eventErrors.Label"></span>
                         </div>
                         <div class="input-field col s3">
                             <label>{{'eventLabels.Type' | translate }} <span
-                                    class="red-text text-lighten-1">*</span></label>
+                                    class="colorAccent-text">*</span></label>
                         </div>
                         <div class="input-field col s9">
                             <select class="" material-select watch name="eventType"
@@ -90,7 +90,7 @@
                                 <option ng-repeat="p in listEventType track by $index" value="{{p.code}}">{{p.label}}
                                 </option>
                             </select>
-                            <span class="small red-text text-lighten-1"
+                            <span class="small colorAccent-text"
                                   ng-show="eventForm.eventType.$invalid && !eventForm.eventType.$pristine"
                                   translate="eventErrors.Type"></span>
                         </div>
@@ -101,15 +101,15 @@
             <div class="card-panel grey lighten-3" ng-show="chooseAdversary">
                 <div class="row">
                     <div class="input-field col s10 m5">
-                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionActorsHome' | translate }} <span
-                                class="red-text text-lighten-1">*</span></label></h6>
+                        <h6 class="colorAccent-text">{{'eventLabels.SectionActorsHome' | translate }} <span
+                                class="colorAccent-text">*</span></label></h6>
                         <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId"
                                 name="SectionActorsHome" ng-change="changeTeamHome()" ng-required="chooseAdversary"
                                 ng-class="{ 'has-error' : eventForm.SectionActorsHome.$invalid && !eventForm.SectionActorsHome.$pristine }">
                             <option value="" disabled selected>{{'eventLabels.Team' | translate }}</option>
                             <option ng-repeat="p in listTeamHome track by $index" value="{{p._id}}">{{p.label}}</option>
                         </select>
-                        <span class="small red-text text-lighten-1 col s12"
+                        <span class="small colorAccent-text col s12"
                               ng-show="eventForm.SectionActorsHome.$invalid && !eventForm.SectionActorsHome.$pristine"
                               translate="eventErrors.teamHome"></span>
                     </div>
@@ -118,12 +118,12 @@
                     </div>
 
                     <div class="input-field col s10 m5" ng-show="chooseHome">
-                        <h6 class="red-text text-lighten-1">{{'eventLabels.SectionActorsAdversary' | translate }} <span
-                                class="red-text text-lighten-1">*</span></label></h6>
+                        <h6 class="colorAccent-text">{{'eventLabels.SectionActorsAdversary' | translate }} <span
+                                class="colorAccent-text">*</span></label></h6>
                         <input type="text" list="adversaries" name="SectionActorsAdversary" ng-model="adversaryLabel"
                                placeholder="{{'eventLabels.Adversary' | translate }}" ng-required="chooseHome"
                                ng-class="{ 'has-error' : eventForm.SectionActorsAdversary.$invalid && !eventForm.SectionActorsAdversary.$pristine }"/>
-                        <span class="small red-text text-lighten-1 col s12"
+                        <span class="small colorAccent-text col s12"
                               ng-show="eventForm.SectionActorsAdversary.$invalid && !eventForm.SectionActorsAdversary.$pristine"
                               translate="eventErrors.adversary"></span>
                         <datalist id="adversaries">
@@ -136,7 +136,7 @@
             <!-- Localisation-->
             <div class="card-panel">
                 <div class="row">
-                    <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionPlace' | translate }}</h6>
+                    <h6 class="colorAccent-text col s12">{{'eventLabels.SectionPlace' | translate }}</h6>
                     <div class="input-field col m2 s4">
                         <i class="material-icons prefix">home</i>
                         <label for="formatedAddress">{{'eventLabels.Address' | translate }}</label>
@@ -160,10 +160,12 @@
                 <!-- actions buttons -->
                 <div class="row">
                     <div class="col s12 center-align">
-                        <a href="" class="btn red lighteen-1 white-text waves-effect waves-light center"
-                           ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
-                        <button class="btn green darken-1 waves-effect waves-light center" type="submit"
-                                ng-disabled="eventForm.$invalid" translate="commons.buttons.validate">
+                        <button class="btn colorAccent white-text waves-effect waves-light center"
+                           ng-click="doTheBack()" translate="commons.buttons.cancel"></button>
+                        <button type="submit" translate="commons.buttons.validate"
+                                ng-disabled="eventForm.$invalid"
+                                ng-class="{'btn waves-effect waves-white disabled': eventForm.$invalid, 
+                                           'btn waves-effect waves-white colorSecondary': !eventForm.$invalid}">
                         </button>
                     </div>
                 </div>
