--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -131,7 +131,7 @@
 
                             <div class="card-action">
                                 <a href="#/private/playerStats/{{player._id}}"
-                                   class="btn waves-effect colorAccent white-text">
+                                   class="waves-effect colorAccent-text">
                                     <i class="fa fa-bar-chart"></i>
                                 </a>
 
