--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -67,7 +67,7 @@
                                 </span>
                             </div>
                             <div class="card-action">
-                                <a href="#/private/teamStats/{{team._id}}" class="btn waves-effect colorAccent white-text"><i
+                                <a href="#/private/teamStats/{{team._id}}" class="waves-effect colorAccent-text"><i
                                         class="fa fa-bar-chart"></i></a>
                                 <div class="right">
                                     <input type="checkbox" ng-model="compareList[team._id]" name="compare"
@@ -85,7 +85,7 @@
                                 </span>
                             </div>
                             <div class="card-action">
-                                <a href="#/private/teamStats/{{team._id}}" class="btn waves-effect colorAccent white-text"><i
+                                <a href="#/private/teamStats/{{team._id}}" class="waves-effect colorAccent-text"><i
                                         class="fa fa-bar-chart"></i></a>
                                 
                                 <div class="right">
