--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -36,13 +36,13 @@
 <!-- Modal map Player -->
 <div ng-attr-id="modalEvent-{{event._id}}" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i>
+        <div class="colorMain-text"><i class="material-icons">location_on</i>
             {{event.address.formatedAddress}}
         </div>
         <br>
         <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
     </div>
-    <div class="modal-footer">
+    <div class="modal-footer center-align">
         <a href="" class="modal-action modal-close waves-effect waves-light btn colorAccent"
            translate="commons.buttons.close"></a>
     </div>
