--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -3,101 +3,40 @@
     <div class="row"></div>
 
     <!-- entete start tablet and sup-->
-    <div class="row colorMain hide-on-small-only white-text">
-        <div class="col s1 left-align">
+    <div class="row colorMain white-text">
+        <div class="col s2 left-align">
             <h5><i class="material-icons md-36">event</i></h5>
         </div>
 
-        <div class="col s9 center-align">
+        <div class="col s8 center-align">
             <h5>{{'mainAgenda.title' | translate }} {{currentEffective.label}}</h5>
         </div>
-
-        <div class="col s2 center-align">
-            <h5>
-                <a href="#/private/addEvent/{{effectiveId}}">
-                    <i class="material-icons md-36 white-text">add</i>
-                </a>
-                <a ng-click="compare()" class="white-text text-lighten-1"
-                   href="" title="{{'mainEffective.buttons.compare' | translate}}">
-                    <i class="material-icons md-36">recent_actors</i>&nbsp;
-                </a>
-            </h5>
-        </div>
+        
+        <div class="col s2">&nbsp;</div>
 
         <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
-    </div>
-    <!-- entete end -->
-
-    <!-- entete start smartphone-->
-    <div class="row colorMain hide-on-med-and-up white-text">
-
-        <div class="col s12 center-align">
-            <h5>{{'mainAgenda.title' | translate }} {{currentEffective.label}}</h5>
-        </div>
-
-        <div class="col s12 center-align">
-            <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-                <a href="#/private/addEvent/{{effectiveId}}" class="btn-floating btn-large red lighten-1">
-                    <i class="material-icons md-24 white-text">add</i>
-                </a>
-            </div>
-            <div class="fixed-action-btn" style="bottom: 45px; right: 94px;">
-                <button ng-click="compare()" class="btn-floating btn-large red lighten-1">
-                    <i class="material-icons md-24 white-text">recent_actors</i>
-                </button>
-            </div>
-        </div>
-
-        <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
-    </div>
-    <!-- entete end -->
-
-    <!-- entete 
-     <div class="row">
-        <div class="col s12"> 
-            <div class="row colorMain">
-                <div class="col m1 hide-on-small-only center-align white-text">
-                    <br><i class="fa fa-calendar fa-2x"></i>
-                    
-                </div>
-                <!-- effective list 
-                <ul id="mainAgendaEffectiveList" class="dropdown-content">
-                    <li ng-repeat="effective in effectives track by $index">
-                        <a href="#/private/agenda/{{effective._id}}"><h6 class="blue-grey-text text-darken-2">{{effective.label}} - {{effective.categoryAge.label}}</h6></a>
-                        <div class="divider"></div>
-                    </li>
-                </ul>
-
-                <div class="col m3 s12 center" ng-show="effectives.length > 1">
-                    <br/>
-                    <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="mainAgendaEffectiveList">
-                        {{'mainAgenda.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
-                        <i class="material-icons right">arrow_drop_down</i>
-                    </a>
-                </div>
-                
-                <div class="col m6 s12 white-text center">
-                    <h4>{{'mainAgenda.title' | translate }}  {{currentEffective.label}}</h4>
-                </div>
-                
-                <div class="col m2 s12 center">
-                    <br/>
-                    <a href="#/private/addEvent/{{effectiveId}}" class="white-text"><i class="fa fa-plus-square-o fa-2x"></i></a>
-                </div>
-                
-                <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
-            </div>
-        </div>
     </div>
     <!-- entete end -->
 
     <div class="row center">
 
         <!-- filter -->
-        <form class="forms forms-inline input-field">
-            <input type="text" id="query" class="grey lighten-4" ng-model="query">
-            <label for="query" translate="commons.buttons.filter"></label>
-        </form>
+        <div class="col m8 s12">
+            <form class="forms forms-inline input-field">
+                <input type="text" id="query" class="grey lighten-4" ng-model="query">
+                <label for="query" translate="commons.buttons.filter"></label>
+            </form>
+        </div>
+        <div class="col m4 s12 center-align">
+            <br>
+            <a href="#/private/addEvent/{{effectiveId}}" class="waves-effect waves-light btn colorAccent">
+                <i class="material-icons">add</i>
+            </a>
+            <button ng-click="compare()" class="waves-effect waves-light btn colorAccent"
+               title="{{'mainEffective.buttons.compare' | translate}}">
+                <i class="material-icons">recent_actors</i>&nbsp;
+            </button>
+        </div>
     </div>
 
     <div class="row" ng-if="events.length > 0">
@@ -112,7 +51,7 @@
         <div class="col s12">
             <div class="card">
                 <div class="row center">
-                    <a href="#/private/addEvent/{{effectiveId}}" class="blue-grey-text text-darken-1">
+                    <a href="#/private/addEvent/{{effectiveId}}" class="colorMain-text">
                         <i class="fa fa-plus-square-o fa-5x"></i>
                         <h3 translate="mainAgenda.buttons.addEvent"></h3>
                     </a>
